# stream-deck-profile-sync

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
stream_deck_sync/: __init__.py  cli.py  config.py  profiles.py  schedule.py  sync.py  watcher.py
tests/: test_cli.py  test_config.py  test_profiles.py  test_schedule.py  test_sync.py  test_watcher.py
