[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stream-deck-profile-sync"
version = "0.3.0"
description = "Synchronize Elgato Stream Deck profiles across multiple machines"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "click>=8.0",
]

[project.scripts]
stream-deck-sync = "stream_deck_sync.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
